--- a/my-code/09_drag-and-drop-project/package.json
+++ b/my-code/09_drag-and-drop-project/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Understanding TypeScript Course Setup",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "build": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
