--- a/my-code/09_drag-and-drop-project/package.json
+++ b/my-code/09_drag-and-drop-project/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Understanding TypeScript Course Setup",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "build": "tsc --watch",
+    "build:original": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server",
-    "typescript:init": "tsc --init"
+    "start": "webpack-dev-server",
+    "typescript:init": "tsc --init",
+    "build": "webpack --confing webpack.config.production.js"
   },
   "keywords": [
     "typescript",
@@ -17,7 +17,12 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "lite-server": "^2.5.4",
-    "typescript": "^3.8.3"
+    "ts-loader": "^7.0.3",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
